--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "eslint": "./node_modules/.bin/eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,9 +16,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "babel-root-import": "^4.1.5",
+    "eslint": "^3.12.2",
     "json-schema-faker": "^0.4.0"
   }
 }
